[tool.poetry]
name = "aurlcutter"
version = "0.0.1"
description = "Asynchronous lib for making short urls"
authors = ["Mesiriak <iamzhv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
